--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 
 * {
-  margin: 0;
   padding: 0;
   box-sizing: border-box;
+  max-width: 100%;
+  margin: 0 auto 0 auto;
 }
 
 html {
-
   font-family: 'Oswald', sans-serif;
 }
 
@@ -30,13 +30,18 @@ nav ul li a {
   text-transform: uppercase;
 }
 
-body {
+main {
   background-image: url(img/background.svg);
   background-size: 100vw;
   margin: 0 auto;
   background-repeat: no-repeat;
   background-position: 0 9vh;
   height: fit-content;
+  max-width: 1920px;
+}
+
+body {
+
 }
 
 footer {
@@ -65,6 +70,7 @@ a {
   justify-content: center;
   padding: 10px;
   box-shadow: rgba(0, 0, 0, 0.16) 0 10px 36px 0, rgba(0, 0, 0, 0.06) 0 0 0 1px;
+  z-index: 2;
 }
 
 .navbar-logo {
@@ -97,8 +103,12 @@ a {
 }
 
 .portfolio {
-  height: 100vh;
   width: 90vw;
+  margin: 10px auto 0 auto;
+}
+
+.portfolio h2 {
+  margin-bottom: 10px;
 }
 
 .contact-footer {
@@ -116,6 +126,10 @@ a {
   margin-right: 10px;
 }
 
+.contact-footer a {
+  margin: 10px;
+}
+
 .follow-me {
   text-transform: uppercase;
   text-align: center;
@@ -125,6 +139,10 @@ a {
 .follow-me {
   margin: 0 5px 0 5px;
   font-size: 36px;
+}
+
+.follow-me a {
+  margin: 10px;
 }
 
 .creator {
@@ -137,12 +155,354 @@ a {
   width: 40%;
 }
 
+.creator img {
+  margin: 10px;
+}
+
 .copyrights {
   background-color: #4C4E46;
   width: 100%;
   height: 8vh;
   line-height: 8vh;
   text-align: center;
+}
+
+  a:hover{
+    color: #9DCECB;
+  }
+
+
+@media screen and (min-width: 320px)
+and (orientation: portrait) {
+
+  .header {
+    height: 10vh;
+  }
+
+  .navbar-logo {
+    height: 8vh;
+  }
+
+  .home {
+    height: 45vh;
+  }
+
+  .about {
+    height: 75vh;
+  }
+
+  nav ul li a {
+    font-size: 18px;
+  }
+
+  footer {
+    flex-direction: column;
+    align-content: space-between;
+    height: 70vh;
+  }
+
+  .contact-footer {
+    height: 30%;
+    width: 100%;
+  }
+
+  .contact-footer a {
+    margin: 10px
+  }
+
+  .follow-me {
+    width: 33%;
+  }
+
+  .follow-me a {
+    margin: 10px;
+  }
+
+  .creator {
+    width: 33%;
+  }
+
+  .creator img {
+    margin: 10px;
+  }
+
+  .creator-logo {
+    width: 100%;
+  }
+
+}
+
+@media screen and (min-width: 360px)
+and (orientation: portrait) {
+
+  .header {
+    height: 10vh;
+  }
+
+  .navbar-logo {
+    height: 8vh;
+  }
+
+  .home {
+    height: 45vh;
+  }
+
+  .about {
+    height: 60vh;
+  }
+
+  nav ul li a {
+    font-size: 18px;
+  }
+
+  footer {
+    flex-direction: column;
+    align-content: space-between;
+    height: 70vh;
+  }
+
+  .contact-footer {
+    height: 30%;
+    width: 100%;
+  }
+
+  .contact-footer a {
+    margin: 10px
+  }
+
+  .follow-me {
+    width: 33%;
+  }
+
+  .follow-me a {
+    margin: 10px;
+  }
+
+  .creator {
+    width: 33%;
+  }
+
+  .creator img {
+    margin: 10px;
+  }
+
+  .creator-logo {
+    width: 100%;
+  }
+
+}
+
+@media screen and (min-width: 411px)
+and (orientation: portrait) {
+
+  .home{
+    height: 45vh;
+  }
+
+  .about {
+    height: 60vh;
+    font-size: 20px;
+  }
+
+  nav ul li a {
+    font-size: 18px;
+  }
+
+  footer {
+    flex-direction: column;
+    align-content: space-between;
+    height: 50vh;
+  }
+
+  .contact-footer {
+    height: 30%;
+    width: 100%;
+  }
+
+  .contact-footer a {
+    margin: 10px;
+    font-size: 18px;
+  }
+
+  .follow-me {
+    width: 33%;
+  }
+
+  .follow-me a {
+    margin: 10px;
+  }
+
+  .creator {
+    width: 33%;
+  }
+
+  .creator img {
+    margin: 10px;
+  }
+
+  .creator-logo {
+    width: 100%;
+  }
+
+}
+
+@media screen and (min-width: 601px)
+and (orientation: portrait) {
+
+  nav ul li a{
+    font-size: 24px;
+  }
+
+  .home{
+    height: 40vh;
+  }
+
+  .home-logo{
+    margin-top: 30%;
+    width: 50%;
+  }
+
+  .about {
+    margin-top: 17%;
+    height: 35vh;
+  }
+
+  footer {
+    flex-direction: column;
+    align-content: space-between;
+    height: 60vh;
+  }
+
+  footer h3{
+    font-size: 28px;
+  }
+
+  .contact-footer {
+    height: 33%;
+    width: 100%;
+  }
+
+  .contact-footer a {
+    margin: 10px;
+    font-size: 21px;
+  }
+
+  .follow-me {
+    width: 33%;
+  }
+
+  .follow-me a {
+    margin: 10px;
+    font-size: 40px;
+  }
+
+  .creator {
+    width: 33%;
+  }
+
+  .creator img {
+    margin: 10px;
+  }
+
+  .creator-logo {
+    width: 70%;
+  }
+
+  .copyrights{
+    font-size: 19px;
+  }
+
+}
+
+@media screen and (min-width: 768px)
+and (orientation: portrait) {
+
+  .home-logo{
+    margin-top: 20%;
+    width: 50%;
+  }
+
+  .about {
+    margin-top: 25%;
+    height: 25vh;
+  }
+
+  .creator-logo {
+    width: 70%;
+  }
+
+}
+
+@media screen and (min-width: 800px)
+and (orientation: portrait) {
+
+  .navbar-logo{
+    height: 6vh;
+  }
+
+  nav ul li a{
+    font-size: 25px;
+  }
+
+  .home{
+    height: 40vh;
+  }
+
+  .home-logo{
+    margin-top: 30%;
+    width: 50%;
+  }
+
+  .about {
+    margin-top: 17%;
+    height: 25vh;
+  }
+
+  footer {
+    flex-direction: column;
+    align-content: space-between;
+    height: 45vh;
+  }
+
+  footer h3{
+    font-size: 28px;
+  }
+
+  .contact-footer {
+    height: 33%;
+    width: 100%;
+  }
+
+  .contact-footer a {
+    margin: 10px;
+    font-size: 21px;
+  }
+
+  .follow-me {
+    width: 33%;
+  }
+
+  .follow-me a {
+    margin: 10px;
+    font-size: 40px;
+  }
+
+  .creator {
+    width: 33%;
+  }
+
+  .creator img {
+    margin: 10px;
+  }
+
+  .creator-logo {
+    width: 70%;
+  }
+
+  .copyrights{
+    font-size: 19px;
+  }
+
 }
 
 @media screen and (min-width: 533px)
@@ -175,48 +535,29 @@ and (orientation: landscape) {
     width: 33%;
   }
 
+  .contact-footer a {
+    margin: 10px;
+  }
+
   .follow-me {
     width: 33%;
+  }
+
+  .follow-me a {
+    margin: 10px;
   }
 
   .creator {
     width: 33%;
   }
 
+  .creator img {
+    margin: 10px;
+  }
+
   .creator-logo {
     width: 50%;
   }
-}
-
-@media screen and (min-width: 360px)
-and (orientation: portrait) {
-
-  .header {
-    height: 10vh;
-  }
-
-  .navbar-logo {
-    height: 8vh;
-  }
-
-  .home {
-    height: 45vh;
-  }
-
-  .about {
-    height: 70vh;
-  }
-
-  nav ul li a {
-    font-size: 18px;
-  }
-
-  footer {
-    flex-direction: column;
-    align-content: space-between;
-    height: 60vh;
-  }
-
 }
 
 @media screen and (min-width: 640px)
@@ -267,3 +608,397 @@ and (orientation: landscape) {
   }
 
 }
+
+@media screen and (min-width: 962px)
+and (orientation: landscape) {
+
+  .header {
+    height: 14vh;
+  }
+
+  .navbar-logo {
+    height: 8vh;
+  }
+
+  .home {
+    height: 110vh;
+  }
+
+  .about {
+    height: 30vh;
+  }
+
+  nav ul li a {
+    font-size: 24px;
+  }
+
+  main {
+    background-image: url(img/background.svg);
+    background-size: 100vw;
+    margin: 0 auto;
+    background-repeat: no-repeat;
+    background-position: 0 7vh;
+    height: fit-content;
+    max-width: 1920px;
+  }
+
+  footer {
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+    align-content: space-between;
+    height: 25vh;
+  }
+
+  .contact-footer {
+    width: 33%;
+  }
+
+  .contact-footer a {
+    margin: 10px
+  }
+
+  .follow-me {
+    width: 33%;
+  }
+
+  .follow-me a {
+    margin: 10px;
+  }
+
+  .creator {
+    width: 33%;
+  }
+
+  .creator img {
+    margin: 10px;
+  }
+
+  .creator-logo {
+    width: 30%;
+  }
+
+}
+
+@media screen and (min-width: 1280px)
+and (orientation: landscape) {
+
+  .header {
+    height: 14vh;
+  }
+
+  .navbar-logo {
+    height: 8vh;
+  }
+
+  .home {
+    height: 120vh;
+  }
+
+  .about {
+    height: 25vh;
+  }
+
+  nav ul li a {
+    font-size: 24px;
+  }
+
+  main {
+    background-image: url(img/background.svg);
+    background-size: 100vw;
+    margin: 0 auto;
+    background-repeat: no-repeat;
+    background-position: 0 7vh;
+    height: fit-content;
+    max-width: 1920px;
+  }
+
+  footer {
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+    align-content: space-between;
+    height: 30vh;
+  }
+  footer h3{
+    font-size: 34px;
+  }
+
+  .contact-footer {
+    width: 33%;
+  }
+
+  .contact-footer a {
+    margin: 10px;
+    font-size: 22px;
+  }
+
+  .follow-me {
+    width: 33%;
+  }
+
+  .follow-me a {
+    margin: 10px;
+  }
+
+  .creator {
+    width: 33%;
+  }
+
+  .creator img {
+    margin: 10px;
+  }
+
+  .creator-logo {
+    width: 40%;
+  }
+
+}
+
+@media screen and (min-width: 1366px)
+and (orientation: landscape) {
+
+  .header {
+    height: 11vh;
+  }
+
+  .navbar-logo {
+    height: 8vh;
+  }
+
+  .home {
+    height: 120vh;
+  }
+
+  .about {
+    height: 25vh;
+  }
+
+  nav ul li a {
+    font-size: 26px;
+  }
+
+  footer {
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+    align-content: space-between;
+    height: 20vh;
+  }
+
+  .contact-footer {
+    width: 33%;
+  }
+
+  .contact-footer a {
+    margin: 10px
+  }
+
+  .follow-me {
+    width: 33%;
+  }
+
+  .follow-me a {
+    margin: 10px;
+  }
+
+  .creator {
+    width: 33%;
+  }
+
+  .creator img {
+    margin: 10px;
+  }
+
+  .creator-logo {
+    width: 25%;
+  }
+
+}
+
+@media screen and (min-width: 1440px)
+and (orientation: landscape) {
+
+  .header {
+    height: 11vh;
+  }
+
+  .navbar-logo {
+    height: 8vh;
+  }
+
+  .home {
+    height: 110vh;
+  }
+
+  .about {
+    height: 25vh;
+  }
+
+  nav ul li a {
+    font-size: 26px;
+  }
+
+  footer {
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+    align-content: space-between;
+    height: 25vh;
+  }
+
+  .contact-footer {
+    width: 33%;
+  }
+
+  .contact-footer a {
+    margin: 10px
+  }
+
+  .follow-me {
+    width: 33%;
+  }
+
+  .follow-me a {
+    margin: 10px;
+  }
+
+  .creator {
+    width: 33%;
+  }
+
+  .creator img {
+    margin: 10px;
+  }
+
+  .creator-logo {
+    width: 35%;
+  }
+
+}
+
+@media screen and (min-width: 1536px)
+and (orientation: landscape) {
+
+  .header {
+    height: 11vh;
+  }
+
+  .navbar-logo {
+    height: 8vh;
+  }
+
+  .home {
+    height: 120vh;
+  }
+
+  .about {
+    height: 25vh;
+  }
+
+  nav ul li a {
+    font-size: 26px;
+  }
+
+  footer {
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+    align-content: space-between;
+    height: 25vh;
+  }
+
+  .contact-footer {
+    width: 33%;
+  }
+
+  .contact-footer a {
+    margin: 10px
+  }
+
+  .follow-me {
+    width: 33%;
+  }
+
+  .follow-me a {
+    margin: 10px;
+  }
+
+  .creator {
+    width: 33%;
+  }
+
+  .creator img {
+    margin: 10px;
+  }
+
+  .creator-logo {
+    width: 35%;
+  }
+
+}
+
+@media screen and (min-width: 1920px)
+and (orientation: landscape) {
+
+  .header {
+    height: 11vh;
+  }
+
+  .navbar-logo {
+    height: 8vh;
+  }
+
+  .home {
+    height: 140vh;
+  }
+
+  .about {
+    padding: 0 50px 0 50px;
+    height: 40vh;
+    font-size: 36px;
+  }
+
+  nav ul li a {
+    font-size: 26px;
+  }
+
+  footer {
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+    align-content: space-between;
+    height: 25vh;
+  }
+
+  .contact-footer {
+    width: 33%;
+  }
+
+  .contact-footer a {
+    margin: 10px
+  }
+
+  .follow-me {
+    width: 33%;
+  }
+
+  .follow-me a {
+    margin: 10px;
+  }
+
+  .creator {
+    width: 33%;
+  }
+
+  .creator img {
+    margin: 10px;
+  }
+
+  .creator-logo {
+    width: 35%;
+  }
+
+}
+
+
