--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,11 @@ a {
   z-index: 2;
 }
 
+.header a{
+  position: relative;
+  margin-right: 10px;
+}
+
 .navbar-logo {
   height: 6vh;
   margin-left: auto;
